2012-02-08  Corinna Vinschen  <corinna@vinschen.de>

	* dll_init.cc (dll_list::alloc): Add DLL name to fabort output.  Fix
	fabort string in case of bss start.

2012-02-08  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/sysmacros.h: Include sys/types.h.

2012-02-07  Corinna Vinschen  <corinna@vinschen.de>

	* mount.cc (mount_info::create_root_entry): Fix format specifier in
	api_fatal message.

2012-02-07  Corinna Vinschen  <corinna@vinschen.de>

	* include/process.h: Move here from include/cygwin subdir.
	* exec.cc: Change include of process.h to reflect the fact that it's
	now back in include.
	* spawn.cc: Ditto.
	* syscalls.cc: Ditto.

2012-02-07  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* cygheap.cc (init_cygheap::manage_console_count): Delete.
	* cygheap.h (init_cygheap::manage_console_count): Ditto.
	(init_cygheap::console_count): Ditto.
	* fhandler.h (fhandler_console::has_a): Ditto.
	(fhandler_console::free_console): Declare new function.
	* fhandler_console.cc (fhandler_console::free_console): Define new
	function.
	(fhandler_console::open_setup): Delete call to manage_console_count.
	(fhandler_console::close): Ditto.  Replace with call to free_console().
	* fhandler_tty.cc (fhandler_pty_slave::open): Delete call to
	manage_console_count.
	(fhandler_pty_slave::cleanup): Ditto.
	(fhandler_pty_slave::close): Call fhandler_console::free_console() if
	this is our controlling tty.
	* pinfo.cc (_pinfo::set_ctty): Skip function if tty in question == our
	ctty.  Delete call to manage_console_count.

	* syscalls.cc (close_all_files): Avoid locking and avoid setting errno
	when iterating over fds.

2012-02-07  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* include/cygwin/version.h: Bump CYGWIN_VERSION_DLL_MINOR to 11.

2012-02-03  Václav Zeman  <vhaisman@gmail.com>

	* grp.cc (pwdgrp::parse_group): Convert grp from macro to reference.
	* passwd.cc (pwdgrp::parse_passwd): Ditto for res.

2012-02-02  Christopher Faylor  <me.cygwin2012@cgf.cx>
