@@ -1,5 +1,13 @@
 2012-02-08  Corinna Vinschen  <corinna@vinschen.de>
 
+	* dll_init.cc: Throughout, drop usage of modname in favor of name.
+	(dll_list::find_by_modname): Remove.
+	(dll_list::alloc): Only store module basename in name.  Add comment to
+	explain why.  Simplify address check.  Fix formatting in comment.
+	* dll_init.h (struct dll): Drop modname and find_by_modname.
+
+2012-02-08  Corinna Vinschen  <corinna@vinschen.de>
+
 	* dll_init.cc (dll_list::alloc): Add DLL name to fabort output.  Fix
 	fabort string in case of bss start.
 
